mobile: landing -> header-img stretch fix

--- a/src/pages/bem-oriented-landing-page/css/styles.css
+++ b/src/pages/bem-oriented-landing-page/css/styles.css
@@ -80,6 +80,7 @@ body {
     min-height: 740px;
     background-image: url(../img/first-screen-bg.jpg);
     background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .header__title {
